--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@
         <div class="container">
           <h3>Introduction</h3>
           <p>    
-            ACM/IEEE TinyML Design Contest at ICCAD is a challenging, multi-month, research and development competition, 
-            focusing on real-world problems that requires the implementation of machine learning algorithms 
-            on low-end microprocessors/microcontrollers. It is open to multi-person teams world-wide. The top three teams will be invited to 
-            <a href="https://iccad.com/">2022 International Conference on Computer-Aided Design (ICCAD)</a> to present their solutions, 
+            ACM/IEEE Quantum Computing Real-world Application Design Contest at ICCAD is a challenging, multi-month, research and development competition, 
+            focusing on real-world problems that requires the implementation of quantum algorithms. It is open to multi-person teams world-wide. The top three teams will be invited to 
+            <a href="https://iccad.com/">2023 International Conference on Computer-Aided Design (ICCAD)</a> to present their solutions, 
             and to recieve their awards.
           </p>
           <h3>Tentative Schedule</h3>
@@ -169,9 +168,10 @@
           
           <h3>Contest Organizers</h3>
           <ul class="list-unstyled">
-            <li><b>Zhenge Jia</b> (University of Notre Dame, IN, US)</li>
-            <li><b>Dawei Li</b> (South-Central Minzu University, CN)</li>
-            <li><b>Lichuan Ping</b> (Singular Medical, CN)</li>
+            <li><b>Zhiding Liang</b> (University of Notre Dame, IN, US)</li>
+            <li><b>Di Wu</b> (University of Central Florida, FL, US)</li>
+            <li><b>Xiaowei Xu</b> (Guangdong Provincial People's Hospital, CN)</li>
+            <li><b>Weiwen Jiang</b> (George Mason University, CN)</li>
             <li><b>Yiyu Shi</b> (University of Notre Dame, IN, US)</li>
           </ul>
           <br>
