--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 <!--               </li> -->
 <!--               <li class="nav-item" style="margin:auto"> -->
             <div>
-                <h2><a class="nav-link" href="/">2022 ACM/IEEE TinyML Design Contest at ICCAD<span class="sr-only">(current)</span></a></h2>
+                <h2><a class="nav-link" href="/">2023 ACM/IEEE TinyML Design Contest at ICCAD<span class="sr-only">(current)</span></a></h2>
 <!--               </li> -->
 </div>
 <!--               <li class="nav-item"> -->
-                <a href="https://www.mouser.com/ProductDetail/STMicroelectronics/NUCLEO-L432KC?qs=qzCNEk%252BRr%252BajjPvxjwWK5g%3D%3D">
-                                    <img border="0" src="Figures/1.jpg" width="100" height="100"></a>
+                <a href="/">
+                                    <img border="0" src="Figures/qc.jpg" width="100" height="100"></a>
 <!--               </li> -->
 <!--               <li class="nav-item"> -->
 <!--                 <a href="https://www.mouser.com/ProductDetail/STMicroelectronics/NUCLEO-L432KC?qs=qzCNEk%252BRr%252BajjPvxjwWK5g%3D%3D">
