--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- Sidebar -->
       <nav id="sidebar">
         <div class="sidebar-header">
-          <h3><a href="/">TinyML Contest</a></h3>
+          <h3><a href="/">Quantum Computing Real-world Application Contest</a></h3>
         </div>
 
         <ul class="list-unstyled components">
