--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </div>
 <!--               <li class="nav-item"> -->
                 <a href="/">
-                                    <img border="0" src="Figures/qc.jpg" width="100" height="100"></a>
+                                    <img border="0" src="Figures/qc.png" width="100" height="100"></a>
 <!--               </li> -->
 <!--               <li class="nav-item"> -->
 <!--                 <a href="https://www.mouser.com/ProductDetail/STMicroelectronics/NUCLEO-L432KC?qs=qzCNEk%252BRr%252BajjPvxjwWK5g%3D%3D">
