--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>2022 ACM/IEEE TinyML Design Contest @ ICCAD</title>
+    <title>2024 ACM/IEEE QC Real-world Design Contest @ ICCAD</title>
   </head>
   <body>
 
