--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <li>
                 <a href="Submission.html"><i class="fa fa-upload" aria-hidden="true"></i> Submission</a>
             </li>
-          <li>
+          <!-- <li>
                 <a href="Winners.html"><i class="fa fa-trophy" aria-hidden="true"></i> Results</a>
-            </li>
+            </li> -->
           <li>
                 <a href="Contact.html"><i class="fa fa-comments-o" aria-hidden="true"></i> Contact</a>
             </li>
@@ -62,7 +62,7 @@
             
 <!--               <li class="nav-item"> -->
                 <a href="https://iccad.com/">
-                                      <img border="0" src="Figures/ICCAD_2022.png" width="140" height="100"></a>
+                                      <img border="0" src="Figures/ICCAD.png" width="140" height="100"></a>
 <!--               </li> -->
 <!--               <li class="nav-item" style="margin:auto"> -->
             <div>
