--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             
 <!--               <li class="nav-item"> -->
                 <a href="https://iccad.com/">
-                                      <img border="0" src="Figures/iccad.png" width="140" height="100"></a>
+                                      <img border="0" src="Figures/iccad.PNG" width="140" height="100"></a>
 <!--               </li> -->
 <!--               <li class="nav-item" style="margin:auto"> -->
             <div>
