--- a/Problems.html
+++ b/Problems.html
@@ -264,7 +264,7 @@
       
     </div>
     <div class="card-footer text-muted text-center">
-      Copyright © ACM/IEEE TinyML Design Contest at ICCAD. All Rights Reserved.
+      Copyright © ACM/IEEE QC Real-World Application Design Contest at ICCAD. All Rights Reserved.
     </div>
     
     <!-- jQuery CDN - Slim version (=without AJAX) -->
