--- a/Problems.html
+++ b/Problems.html
@@ -66,7 +66,7 @@
 <!--               </li> -->
 <!--               <li class="nav-item" style="margin:auto"> -->
             <div>
-                <h2><a class="nav-link" href="/">2023 ACM/IEEE TinyML Design Contest at ICCAD<span class="sr-only">(current)</span></a></h2>
+                <h2><a class="nav-link" href="/">2023 QC Real-World Application Design Contest at ICCAD<span class="sr-only">(current)</span></a></h2>
 <!--               </li> -->
 </div>
 <!--               <li class="nav-item"> -->
@@ -92,11 +92,9 @@
             1.Introduction
           </h5>
           <p>
-            Ventricular fibrillation (VF) and ventricular tachycardia (VT) are two types of life-threatening ventricular arrhythmias (VAs), 
-            which are the main cause of Sudden Cardiac Death (SCD). More than 60% of deaths from cardiovascular disease are from 
-            out-of-hospital SCD [1]. It is caused by a malfunction in the heart's electrical system that can occur when the lower chambers 
-            of the heart suddenly start beating in an uncoordinated fashion, preventing the heart from pumping blood out to the lungs and 
-            body [1]. Unless the heart is shocked back into normal rhythm, the patient rarely survives.
+            The vast and intricate world of drug discovery has always been on the frontier of technological advancements. 
+            As we navigate the complex molecular interactions underlying medical therapies, there's an increasing emphasis on computational techniques to aid our endeavors.
+            The recent rise of quantum computing offers a promising avenue to revolutionize drug discovery, offering potential solutions to problems previously considered insurmountable using classical computation [1].
             <br><br>
             People at high risk of SCD rely on the Implantable Cardioverter Defibrillator (ICD) to deliver proper and in-time defibrillation 
             treatment when experiencing life-threatening VAs. ICD is a small device implanted typically under the skin in the left upper 
@@ -242,7 +240,7 @@
             8.References
           </h5>
           <p>
-            [1] Adabag, A.S., Luepker, R.V., Roger, V.L. and Gersh, B.J., 2010. Sudden cardiac death: epidemiology and risk factors. Nature Reviews Cardiology, 7(4), pp.216-225.
+            [1] Cao, Yudong, Jhonathan Romero, and Alán Aspuru-Guzik. "Potential of quantum computing for drug discovery." IBM Journal of Research and Development 62.6 (2018): 6-1.
           </p>
           <p>
             [2] Zanker, N., Schuster, D., Gilkerson, J. and Stein, K., 2016. Tachycardia detection in ICDs by Boston Scientific. Herzschrittmachertherapie+ Elektrophysiologie, 27(3), pp.186-192.
