--- a/Contact.html
+++ b/Contact.html
@@ -90,7 +90,7 @@
           <p>
             If you would like to learn more, have a feature request, or want to share your feedback, please feel free to reach out our team via:
             <ul>
-              <li>Email - <a href = "mailto: iccadqccontest@gmail.com">tinymlcontest@gmail.com </a></li>
+              <li>Email - <a href = "mailto: iccadqccontest@gmail.com">iccadqccontest@gmail.com </a></li>
             </ul> 
           </p>
 
