--- a/Problems.html
+++ b/Problems.html
@@ -96,21 +96,16 @@
             As we navigate the complex molecular interactions underlying medical therapies, there's an increasing emphasis on computational techniques to aid our endeavors.
             The recent rise of quantum computing offers a promising avenue to revolutionize drug discovery, offering potential solutions to problems previously considered insurmountable using classical computation [1].
             <br><br>
-            People at high risk of SCD rely on the Implantable Cardioverter Defibrillator (ICD) to deliver proper and in-time defibrillation 
-            treatment when experiencing life-threatening VAs. ICD is a small device implanted typically under the skin in the left upper 
-            chest and is programmed to release defibrillation (i.e., electrical shock) therapy on VT and VF to restore rhythm back to 
-            normal. The early and in-time diagnosis and treatment of life-threatening VAs can increase the chances of survival. However, 
-            current detection methods deployed on ICDs count on a wide variety of criteria obtained from clinical trials, and there are 
-            hundreds of programmable criteria parameters affecting the defibrillation delivery decision [2, 3].
+            One such fundamental entity in the realm of pharmacology is the hydroxyl (·OH). Known for its significant role in various physiological and pathological processes, 
+            the hydroxyl is not just a simple molecule but a pivot around which many drug interactions revolve. 
+            This highly reactive species plays a role in oxidative stress, leading to numerous diseases such as neurodegenerative disorders, cardiovascular diseases, and even cancers. 
+            It is also a core component of many drug compounds, contributing to their therapeutic effects.
           </p>
           <p>
-            Automatic detection with less expertise involved in ICDs can further improve the detection performances and reduce the workload 
-            from physicians in criteria design and parameters adjustment [4-6]. This year’s Challenge is asking you to build an AI/ML 
-            algorithm that can classify life-threatening VAs with only the labeled one-channel intracardiac electrograms (IEGMs) sensed by 
-            single-chamber ICDs while satisfying the requirements of in-time detection on the resource-constrained microcontroller (MCU) 
-            platform. We will test each algorithm on databases of IEGMs in terms of detection performances as well as practical 
-            performances, and the comprehensive performances will reveal the utility of the algorithm on life-threatening VAs detection 
-            in ICDs.
+            Given its prominence, understanding the quantum mechanics of the hydroxyl  at an intricate level can significantly impact drug discovery processes. 
+            A fundamental starting point is the accurate determination of its ground state energy. This knowledge can serve as a cornerstone, upon which more complex drug-radical interactions can be built. 
+            However, the quantum realm is notoriously challenging. With the current limitations in qubit numbers and quantum error rates, comprehensive simulations of larger drug molecules remain a distant goal. This is where the elegance of the hydroxyl radical comes into play. 
+            Its relatively smaller size offers a feasible task for current quantum computing capabilities, making it an ideal candidate for a quantum simulation challenge.
           </p>
           <p>
             <img border="0" src="Figures/7.png" width="300" height="200">
