--- a/Problems.html
+++ b/Problems.html
@@ -108,8 +108,8 @@
             Its relatively smaller size offers a feasible task for current quantum computing capabilities, making it an ideal candidate for a quantum simulation challenge.
           </p>
           <p>
-            <img border="0" src="Figures/Hydroxyl3D.png" width="300" height="200">
-            <img border="0" src="Figures/8.png" width="300" height="300">
+            <img border="0" src="Figures/VQC.PNG" width="300" height="200">
+            <img border="0" src="Figures/Hydroxyl3D.png" width="300" height="300">
           </p>
           <h5>
             2.Objective
