--- a/Problems.html
+++ b/Problems.html
@@ -108,15 +108,14 @@
             Its relatively smaller size offers a feasible task for current quantum computing capabilities, making it an ideal candidate for a quantum simulation challenge.
           </p>
           <p>
-            <img border="0" src="Figures/Hydroxyl3D.png" width="300" height="200">
-            <img border="0" src="Figures/VQC.PNG" width="400" height="200">
+            <img border="0" src="Figures/Hydroxyl3D.png" width="200" height="200">
+            <img border="0" src="Figures/VQC.PNG" width="500" height="200">
           </p>
           <h5>
             2.Objective
           </h5>
           <p>
-            The goal of the 2022 Challenge is to discriminate life-threatening VAs (i.e., Ventricular Fibrillation and Ventricular 
-            Tachycardia) from single-lead (RVA-Bi) IEGM recordings.
+            The goal of the 2023 Challenge is to calculate the ground state energy of the hydroxyl (·OH).
           </p>
           <p>
             We ask participants to design and implement a working, open-source AI/ML algorithm that can automatically discriminate 
