--- a/Problems.html
+++ b/Problems.html
@@ -96,7 +96,7 @@
             As we navigate the complex molecular interactions underlying medical therapies, there's an increasing emphasis on computational techniques to aid our endeavors.
             The recent rise of quantum computing offers a promising avenue to revolutionize drug discovery, offering potential solutions to problems previously considered insurmountable using classical computation [1].
             <br><br>
-            One such fundamental entity in the realm of pharmacology is the hydroxyl (·OH). Known for its significant role in various physiological and pathological processes, 
+            One such fundamental entity in the realm of pharmacology is the <b>hydroxyl (·OH)<b>. Known for its significant role in various physiological and pathological processes, 
             the hydroxyl is not just a simple molecule but a pivot around which many drug interactions revolve. 
             This highly reactive species plays a role in oxidative stress, leading to numerous diseases such as neurodegenerative disorders, cardiovascular diseases, and even cancers. 
             It is also a core component of many drug compounds, contributing to their therapeutic effects.
@@ -118,10 +118,11 @@
             The goal of the 2023 Challenge is to calculate the ground state energy of the hydroxyl (·OH).
           </p>
           <p>
-            We ask participants to design and implement a working, open-source AI/ML algorithm that can automatically discriminate 
-            life-threatening VAs (i.e., <b>binary classification: VAs or non-VAs</b>) from IEGM recordings while being able to be deployed and run 
-            on the given MCU platform. We will award prizes to the teams with top comprehensive performances in terms of detection precision, 
-            memory occupation, and inference latency.
+            We ask participants to design and implen1 a working, open-source protocol that can automatically calcualte the ground state energy of the <b>hydroxyl (·OH)<b> from the give 
+            hamiltonian. We enable as large as the freedom in design space as we can. Participants can propose good qubits mapping strategy by codesign by hardware and software;
+            classical shadow can be potentially implemented to reduce the shots on observable to save the cost on quantum resources; AI/ML or scientific-based circuit architecture search framwork
+            could give a good ansatz for better performance; AI/ML or scientific-based error mitigation can also helps for better performance; last but not least, the experience of optimizer, initial
+            paramter or initial scaling of the parameter are important topic for this challenge.
           </p>
           <h5>
             3.Data
