--- a/Problems.html
+++ b/Problems.html
@@ -232,10 +232,10 @@
             [4] Preskill, John. "Quantum computing in the NISQ era and beyond." Quantum 2 (2018): 79.
           </p>
           <p>
-            [5] Acharya, U. Rajendra, et al. "Automated identification of shockable and non-shockable life-threatening ventricular arrhythmias using convolutional neural network." Future Generation Computer Systems 79 (2018): 952-959.
+            [5] Earnest, Nathan, Caroline Tornow, and Daniel J. Egger. "Pulse-efficient circuit transpilation for quantum applications on cross-resonance-based hardware." Physical Review Research 3.4 (2021): 043088.
           </p>
           <p>
-            [6] Hannun, Awni Y., et al. "Cardiologist-level arrhythmia detection and classification in ambulatory electrocardiograms using a deep neural network." Nature medicine 25.1 (2019): 65-69.          
+            [6] McKinney, Evan, et al. "Parallel Driving for Fast Quantum Computing Under Speed Limits." Proceedings of the 50th Annual International Symposium on Computer Architecture. 2023.      
           </p>
         </div>            
       </div>
