--- a/Problems.html
+++ b/Problems.html
@@ -132,7 +132,7 @@
             As a pivotal entity in numerous drug interactions and physiological processes, an intricate understanding of the hydroxyl radical is crucial. 
             To aid participants in this endeavor, we've curated a specialized dataset tailored to encapsulate the of the hydroxyl's hamiltonian.
 
-			      We have provided the <a href="https://github.com/tinymlcontest/tinyml_contest2022_demo_example/blob/master/label_list.csv">.
+			      We have provided the <a href="https://github.com/tinymlcontest/tinyml_contest2022_demo_example/blob/master/label_list.csv"></a>.
           </p>
 		  <h5>
 		    4.Data Format
@@ -160,7 +160,7 @@
           </p>
           <p>
             The IBM qiskit platform is open for public and easy to access online. However, if you do 
-            need support, please contact us. <a href="https://qiskit.org/"></a>
+            need support, please contact us. <a href="https://qiskit.org/"></a>.
           </p>
 		  <h5>
 		    6.Scoring
