--- a/Problems.html
+++ b/Problems.html
@@ -132,7 +132,7 @@
             As a pivotal entity in numerous drug interactions and physiological processes, an intricate understanding of the hydroxyl radical is crucial. 
             To aid participants in this endeavor, we've curated a specialized dataset tailored to encapsulate the of the hydroxyl's hamiltonian.
 
-			      We have provided the <a href="/"> the hamiltonian</a> for reference.
+			      We have provided the <a href="/"> the hamiltonian </a> for reference.
           </p>
 		  <h5>
 		    4.Data Format
@@ -159,8 +159,8 @@
             However, in the spirit of fairness, we will compute the relative decoherence fidelity and adjust your circuit performance accordingly [6].
           </p>
           <p>
-            The IBM qiskit platform is open for public and easy to access online. However, if you do 
-            need support, please contact us. <a href="https://qiskit.org/"></a>.
+            The IBM <a href="https://qiskit.org/"> qiskit platform </a> is open for public and easy to access online. However, if you do 
+            need support, please contact us.
           </p>
 		  <h5>
 		    6.Scoring
