--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <b>Contest release date</b>
             </div>
             <div class="col-8">
-              July 15, 2022 
+              TBD
             </div>
           </div>
           <div class="row">
@@ -105,9 +105,10 @@
               <b>Registration deadline</b>
             </div>
             <div class="col-8">
-              <strike>July 30, 2022 </strike>
+              TBD
+              <!-- <strike>July 30, 2022 </strike>
 			  <font color="red">July 31, 2022 23:59:59 
-			  									(AOE)</font>
+			  									(AOE)</font> -->
             </div>
           </div>
           <div class="row">
@@ -115,9 +116,10 @@
               <b>Final submission due</b>
             </div>
             <div class="col-8">
-              <strike>September 30, 2022 </strike>
+              TBD
+              <!-- <strike>September 30, 2022 </strike>
 			  <font color="red">September 30, 2022 23:59:59
-			  									(AOE)</font>
+			  									(AOE)</font> -->
             </div>
           </div>
           <div class="row">
@@ -125,7 +127,7 @@
               <b>Top three teams notified</b>
             </div>
             <div class="col-8">
-              October 15, 2022 
+              TBD
             </div>
           </div>
           <div class="row">
@@ -133,8 +135,9 @@
               <b>winner announced</b>
             </div>
             <div class="col-8">
-              <strike> At ICCAD Conference (October 30 - November 3, 2022)</strike>
-			  <font color="red">1:45-3:15 pm at Capri on Nov. 2 at ICCAD</font>
+              TBD
+              <!-- <strike> At ICCAD Conference (October 30 - November 3, 2022)</strike>
+			  <font color="red">1:45-3:15 pm at Capri on Nov. 2 at ICCAD</font> -->
             </div>
           </div>
           <br>
@@ -145,7 +148,7 @@
               <b>1st Place Award</b>
             </div>
             <div>
-              US $4500 / team
+              US $???? / team
             </div>
           </div>
           <div class="row">
@@ -153,7 +156,7 @@
               <b>2nd Place Award</b>
             </div>
             <div>
-              US $1500 / team
+              US $???? / team
             </div>
           </div>
           <div class="row">
@@ -161,7 +164,7 @@
               <b>3rd Place Award</b>
             </div>
             <div>
-              US $500 / team
+              US $??? / team
             </div>
           </div>
           <br>
