--- a/Problems.html
+++ b/Problems.html
@@ -177,7 +177,14 @@
 			We have provided an <a href="/"> example algorithm </a> to illustrate how to train the model. 
 		  </p>
 		  <h5>
-            8.References
+		  <h5>
+		    8.Special Thanks
+		  </h5>
+		  <p>
+			We are appreciate the valuable discussion provided by following people: Feng Qian (Tufts University, US), Hang Ren (University of California, Bekerley). 
+		  </p>
+		  <h5>
+            9.References
           </h5>
           <p>
             [1] Cao, Yudong, Jhonathan Romero, and Alán Aspuru-Guzik. "Potential of quantum computing for drug discovery." IBM Journal of Research and Development 62.6 (2018): 6-1.
