--- a/Problems.html
+++ b/Problems.html
@@ -10,7 +10,7 @@
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>2023 ACM/IEEE QC Real-world Design Contest @ ICCAD</title>
+    <title>2023 ACM/IEEE Quantum Computing for Drug Discovery Challenge @ ICCAD</title>
   </head>
   <body>
 
@@ -18,7 +18,7 @@
       <!-- Sidebar -->
       <nav id="sidebar">
         <div class="sidebar-header">
-          <h3><a href="/">Quantum Computing Real-world Application Contest</a></h3>
+          <h3><a href="/">Quantum Computing for Drug Discovery Challenge</a></h3>
         </div>
 
         <ul class="list-unstyled components">
@@ -66,7 +66,7 @@
 <!--               </li> -->
 <!--               <li class="nav-item" style="margin:auto"> -->
             <div>
-                <h2><a class="nav-link" href="/">2023 QC Real-World Application Design Contest at ICCAD<span class="sr-only">(current)</span></a></h2>
+                <h2><a class="nav-link" href="/">2023 QC for Drug Discovery Challenge at ICCAD<span class="sr-only">(current)</span></a></h2>
 <!--               </li> -->
 </div>
 <!--               <li class="nav-item"> -->
@@ -209,7 +209,7 @@
       
     </div>
     <div class="card-footer text-muted text-center">
-      Copyright © ACM/IEEE QC Real-World Application Design Contest at ICCAD. All Rights Reserved.
+      Copyright © ACM/IEEE QC for Drug Discovery Challenge at ICCAD. All Rights Reserved.
     </div>
     
     <!-- jQuery CDN - Slim version (=without AJAX) -->
