--- a/Registration.html
+++ b/Registration.html
@@ -99,7 +99,7 @@
       
     </div>
     <div class="card-footer text-muted text-center">
-      Copyright © ACM/IEEE QC Real-World Application Design Contest at ICCAD. All Rights Reserved.
+      Copyright © ACM/IEEE QC for Drug Discovery Challenge at ICCAD. All Rights Reserved.
     </div>
     
     <!-- jQuery CDN - Slim version (=without AJAX) -->
