--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </div>
     
     <div class="card-footer text-muted text-center">
-      Copyright © ACM/IEEE QC Real-World Application Design Contest at ICCAD. All Rights Reserved.
+      Copyright © ACM/IEEE QC for Drug Discovery Challenge at ICCAD. All Rights Reserved.
     </div>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
