--- a/News.html
+++ b/News.html
@@ -92,7 +92,7 @@
                 <b>August 17, 2023</b>
               </div>
               <div class="col-8">
-                2023 ACM/IEEE QC Real-world Application Design Contest will formally start on TBD.
+                2023 ACM/IEEE Quantum Computing for Drug Discovery Challenge will formally start on TBD.
                 Contest problems are announced.
               </div>
             <!-- </div>
