--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <div class="container">
           <h3>Introduction</h3>
           <p>    
-            ACM/IEEE Quantum Computing Real-world Application Design Contest at ICCAD is a challenging, multi-month, research and development competition, 
-            focusing on real-world problems that requires the implementation of quantum algorithms. It is open to multi-person teams world-wide. The top three teams will be invited to 
+            ACM/IEEE Quantum Computing for Drug Discovery Challenge at ICCAD is a challenging, multi-month, research and development competition, 
+            focusing on drug discorvery related problems that requires the implementation of quantum algorithms. It is open to multi-person teams world-wide. The top three teams will be invited to 
             <a href="https://iccad.com/">2023 International Conference on Computer-Aided Design (ICCAD)</a> to present their solutions, 
             and to recieve their awards.
           </p>
