--- a/Problems.html
+++ b/Problems.html
@@ -181,7 +181,7 @@
 		    8.Special Thanks
 		  </h5>
 		  <p>
-			We are appreciate the valuable discussion provided by following people: Feng Qian (Tufts University, US), Hang Ren (University of California, Bekerley). 
+			We are appreciate the valuable discussion provided by following people: Feng Qian (Tufts University, US), Hang Ren (University of California, Bekerley, US), Jinglei Cheng (Purdue University, US). 
 		  </p>
 		  <h5>
             9.References
