--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
             <div class="col-sm">
               <a href="https://www.sigda.org/"><img border="0" src="Figures/sigda_acm_logo.png" width="90" height="90"></a>
             </div>
-            <div class="col-sm">
+            <!-- <div class="col-sm">
               <a href="http://www.singularmedical.net/"><img border="0" src="Figures/flogo.png" width="220" height="90"></a>
-            </div>
+            </div> -->
           </div>
           <br>
 
