--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
               <b>Contest release date</b>
             </div>
             <div class="col-8">
-              TBD
+              August 22, 2023(AOE)
             </div>
           </div>
           <div class="row">
             <div class="col-4">
               <b>Registration deadline</b>
-            </div>
+              September 8, 2023 23:59:59(AOE)
             <div class="col-8">
-              TBD
+              October 8, 2023 23:59:59(AOE)
               <!-- <strike>July 30, 2022 </strike>
 			  <font color="red">July 31, 2022 23:59:59 
 			  									(AOE)</font> -->
@@ -116,7 +116,7 @@
               <b>Final submission due</b>
             </div>
             <div class="col-8">
-              TBD
+              October 15, 2023(AOE)
               <!-- <strike>September 30, 2022 </strike>
 			  <font color="red">September 30, 2022 23:59:59
 			  									(AOE)</font> -->
@@ -127,7 +127,7 @@
               <b>Top three teams notified</b>
             </div>
             <div class="col-8">
-              TBD
+              To be announced during ICCAD
             </div>
           </div>
           <div class="row">
@@ -148,7 +148,7 @@
               <b>1st Place Award</b>
             </div>
             <div>
-              US $???? / team
+              US $2000 / team
             </div>
           </div>
           <div class="row">
@@ -156,7 +156,7 @@
               <b>2nd Place Award</b>
             </div>
             <div>
-              US $???? / team
+              US $1000 / team
             </div>
           </div>
           <div class="row">
@@ -164,7 +164,7 @@
               <b>3rd Place Award</b>
             </div>
             <div>
-              US $??? / team
+              US $500 / team
             </div>
           </div>
           <br>
