--- a/Problems.html
+++ b/Problems.html
@@ -167,8 +167,9 @@
 		  </h5>
 		  <p>
 			  We will employ specific metrics to evaluate the submitted algorithms. The assessment encompasses the accuracy in estimating the ground state energy, 
-        the consumption of quantum resources (number of shots and duration of the quantum circuit), and the demand on classical computational resources (number of iterations and number of parameters). Specifically, the precision of the ground state energy estimation accounts for 40% of the total score, the consumption of quantum resources represents another 40%, 
-        and the demand on classical computational resources contributes the remaining 20%. More detailed scoring criteria will be updated shortly.
+        the consumption of quantum resources (number of shots and duration of the quantum circuit), and the demand on classical computational resources (number of iterations and number of parameters). Specifically, the precision of the ground state energy estimation accounts for maximum 100 credts, the consumption of quantum resources represents maximum 25 credits, 
+        and the demand on classical computational resources contributes maximum 15 credits. And we require participants to self-reflect their techniques for maximum 10 points, these techniques should include 
+        the tricks implemented in the preprocessing process, and submit a short description of there used techniques. We will have three graders evaluate and do this extra 10 credits grading based on self-reflect score and other aspects include novelty, reasonability, and so on. 
 		  </p> 
 		  <h5>
 		    7.Example Code
