--- a/index.html
+++ b/index.html
@@ -103,12 +103,9 @@
           <div class="row">
             <div class="col-4">
               <b>Registration deadline</b>
-              September 8, 2023 23:59:59(AOE)
+            </div>
             <div class="col-8">
-              October 8, 2023 23:59:59(AOE)
-              <!-- <strike>July 30, 2022 </strike>
-			  <font color="red">July 31, 2022 23:59:59 
-			  									(AOE)</font> -->
+              September 8, 2023 23:59:59(AOE) 		  									
             </div>
           </div>
           <div class="row">
@@ -116,10 +113,15 @@
               <b>Final submission due</b>
             </div>
             <div class="col-8">
+              October 8, 2023 23:59:59(AOE)
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              <b>Notification of Results</b>
+            </div>
+            <div class="col-8">
               October 15, 2023(AOE)
-              <!-- <strike>September 30, 2022 </strike>
-			  <font color="red">September 30, 2022 23:59:59
-			  									(AOE)</font> -->
             </div>
           </div>
           <div class="row">
@@ -128,16 +130,6 @@
             </div>
             <div class="col-8">
               To be announced during ICCAD
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-4">
-              <b>winner announced</b>
-            </div>
-            <div class="col-8">
-              TBD
-              <!-- <strike> At ICCAD Conference (October 30 - November 3, 2022)</strike>
-			  <font color="red">1:45-3:15 pm at Capri on Nov. 2 at ICCAD</font> -->
             </div>
           </div>
           <br>
