--- a/Submission.html
+++ b/Submission.html
@@ -87,7 +87,7 @@
             Submission Requirements
           </h3>
           <p>
-            We will soon release the evaluation project to assess three metrics (i.e., F_beta, latency, and flash usage).
+            We will soon release the evaluation project to assess three metrics (i.e., accuracy, quantum resource cost, classical computation resource cost).
 		  </p>
         </div>            
       </div>
