--- a/Problems.html
+++ b/Problems.html
@@ -175,7 +175,7 @@
 		    7.Example Code
 		  </h5>
 		  <p>
-			We have provided an <a href="/"> example algorithm </a> to illustrate how to train the model. 
+			We have provided an <a href="https://github.com/qccontest/QC-Contest-Demo/tree/main"> example algorithm </a> to illustrate how to train the model. 
 		  </p>
 		  <h5>
 		  <h5>
